k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: soapui-mock
    labels:
        app: soapui-mock
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  selector:
    app: soapui-mock
