k8s/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: web-nodejs-sample
  labels:
    app: web-nodejs-sample
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: web-nodejs-sample
    weight: 100
  port:
    targetPort: 3000
  wildcardPolicy: None
